--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-i18next": "^15.4.1",
     "tesseract.js": "^4.1.1",
     "uploadthing": "^7.5.2",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "next": "^13.4.0"
   }
 }
