--- a/flight-menu-app/package.json
+++ b/flight-menu-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,30 +11,33 @@
   "dependencies": {
     "@google-cloud/vision": "^4.3.3",
     "@uploadthing/react": "^7.3.0",
-    "axios": "^1.8.1",
+    "axios": "^1.6.7",
     "franc-min": "^6.2.0",
     "i18next": "^24.2.2",
-    "next": "15.2.1",
+    "next": "14.1.0",
     "openai": "^4.86.1",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^4.10.38",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.8",
-    "react-i18next": "^15.4.1",
-    "tesseract.js": "^6.0.0",
-    "uploadthing": "^7.5.2",
-    "zustand": "^5.0.3"
+    "pdfjs-dist": "^4.0.379",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-i18next": "^14.0.5",
+    "sharp": "^0.33.2",
+    "tesseract.js": "^5.0.4",
+    "uploadthing": "^7.2.2",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.1",
-    "tailwindcss": "^4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "webpack": "^5.98.0"
   }
