--- a/package.json
+++ b/package.json
@@ -9,33 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google-cloud/vision": "^4.3.3",
     "@uploadthing/react": "^7.3.0",
-    "axios": "^1.8.1",
-    "franc-min": "^6.2.0",
+    "axios": "^1.8.3",
     "i18next": "^24.2.2",
-    "next": "15.2.1",
-    "openai": "^4.86.1",
-    "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^4.10.38",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.8",
-    "react-i18next": "^15.4.1",
-    "tesseract.js": "^6.0.0",
-    "uploadthing": "^7.5.2",
+    "next": "^13.5.6",
+    "openai": "^4.28.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-i18next": "^14.1.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.1",
-    "tailwindcss": "^4",
-    "typescript": "^5",
-    "webpack": "^5.98.0"
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
