--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-dropzone": "^14.2.3",
     "react-i18next": "^14.1.0",
     "zustand": "^5.0.3",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@types/webpack": "^5.28.0",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
@@ -29,7 +31,6 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
