--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "postcss": "^8.4.35",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "tailwindcss": "^4",
+    "@tailwindcss/postcss": "^4"
   }
 }
